--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  
+  <a href="login.html">로그인</a><br>
+  <a href="memberAdd.html">사용자관리</a>
+  <a href="product.html">상품목록</a>
+
+  <script src="init.js"></script>
+  <script>
+    localStorage.setItem('memberData', JSON.stringify(memberData));       // 담기
+    localStorage.setItem('productData', JSON.stringify(productData));
+    localStorage.setItem('cartData', JSON.stringify(cartData));
+  </script> 
 </body>
+
 </html>
