--- a/book/booksaw-1.0.0/Mindex.html
+++ b/book/booksaw-1.0.0/Mindex.html
@@ -49,7 +49,7 @@
 					</div>
 					<div class="col-md-6">
 						<div class="right-element">
-							<a href="#" class="user-account for-buy"><i
+							<a href="Mlogin.html" class="user-account for-buy"><i
 									class="icon icon-user"></i><span>Account</span></a>
 							<a href="#" class="cart for-buy"><i class="icon icon-clipboard"></i><span>Cart:(0
 									$)</span></a>
@@ -187,12 +187,7 @@
 			<div class="row">
 				<div class="inner-content">
 					<div class="logo-wrap">
-						<div class="grid">
-							<a href="#"><img src="images/client-image1.png" alt="client"></a>
-							<a href="#"><img src="images/client-image2.png" alt="client"></a>
-							<a href="#"><img src="images/client-image3.png" alt="client"></a>
-							<a href="#"><img src="images/client-image4.png" alt="client"></a>
-							<a href="#"><img src="images/client-image5.png" alt="client"></a>
+
 						</div>
 					</div><!--image-holder-->
 				</div>
@@ -209,7 +204,7 @@
 						<div class="title">
 							<span>Some quality items</span>
 						</div>
-						<h2 class="section-title">Featured Books</h2>
+						<h2 class="section-title">신간도서</h2>
 					</div>
 
 					<div class="product-list" data-aos="fade-up">
@@ -347,7 +342,7 @@
 						<div class="title">
 							<span>Some quality items</span>
 						</div>
-						<h2 class="section-title">Popular Books</h2>
+						<h2 class="section-title">인기도서</h2>
 					</div>
 
 					<ul class="tabs">
