--- a/foodmarket/memberAdd.html
+++ b/foodmarket/memberAdd.html
@@ -16,7 +16,7 @@
 <table border="2"> 
   <thead>
   <tr>
-    <th>아이디</th><th>비밀번호</th><th>이름</th>
+    <th>아이디</th><th>비밀번호</th><th>이름1</th>
   </tr>
 </thead>
 <tbody id="list"></tbody>
