--- a/book/booksaw-1.0.0/memberAdd.html
+++ b/book/booksaw-1.0.0/memberAdd.html
@@ -32,9 +32,9 @@
   </tbody>
   </table>
 
-  <a href="login2.html">로그인</a>
-  <a href="index2.html">첫페이지로 이동(주의: 데이터가 초기화됩니다)</a>
-  <script src="members2.js"></script>
+  <a href="login.html">로그인</a>
+  <a href="index.html">첫페이지로 이동(주의: 데이터가 초기화됩니다)</a>
+  <script src="members.js"></script>
   </form>
 </body>
 
