--- a/book/booksaw-1.0.0/memberAdd.html
+++ b/book/booksaw-1.0.0/memberAdd.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원관리페이지</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link  rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
@@ -19,11 +20,11 @@
   <table border="2" class="table table-striped">
     <thead>
       <tr>
+        <td>
         <th>아이디</th>
         <th>비밀번호</th>
         <th>이름</th>
         <th>권한</th>
-      
         </td>
       </tr>
     </thead>
