--- a/myProject/addbook.html
+++ b/myProject/addbook.html
@@ -38,6 +38,94 @@
 
   </style>
 </head>
+<div id="header-wrap">
+
+  <div class="top-content">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="social-links">
+            <ul>
+              <li>
+                <a href="#"><i class="icon icon-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="icon icon-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="icon icon-youtube-play"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="icon icon-behance-square"></i></a>
+              </li>
+            </ul>
+          </div><!--social-links-->
+        </div>
+        <div class="col-md-6">
+          <div class="right-element">
+            <a href="login.html" class="user-account for-buy"><i
+                class="icon icon-user"></i><span>Account</span></a>
+            <a href="#" class="cart for-buy"><i class="icon icon-clipboard"></i><span>Cart:(0
+                $)</span></a>
+
+            <div class="action-menu">
+
+              <div class="search-bar">
+                <a href="#" class="search-button search-toggle" data-selector="#header-wrap">
+                  <i class="icon icon-search"></i>
+                </a>
+                <form role="search" method="get" class="search-box">
+                  <input class="search-field text search-input" placeholder="Search"
+                    type="search">
+                </form>
+              </div>
+            </div>
+
+          </div><!--top-right-->
+        </div>
+
+      </div>
+    </div>
+  </div><!--top-content-->
+
+  <header id="header">
+    <div class="container-fluid">
+      <div class="row">
+
+        <div class="col-md-2">
+          <div class="main-logo">
+            <a href="index.html"><img src="images/main-logo.png" alt="logo"></a>
+          </div>
+
+        </div>
+
+        <div class="col-md-10">
+
+          <nav id="navbar">
+            <div class="main-menu stellarnav">
+              <ul class="menu-list">
+                </li>
+                <li class="menu-item"><a href="#home" class="=nav-link">Home</a></li>
+                <li class="menu-item"><a href="#pages" class="nav-link">상품목록</a></li>
+                <li class="menu-item"><a href="addbook.html" class="nav-link">희망도서신청</a></li>
+              </ul>
+
+              <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+              </div>
+
+            </div>
+          </nav>
+
+        </div>
+
+      </div>
+    </div>
+  </header>
+
+</div><!--header-wrap-->
 
 <body>
   <div id="container">
@@ -51,7 +139,7 @@
       <button id="applyBtn">신청</button>
     </form>
     <br>
-    <table border="2">
+    <table border="2" class = table>
       <thead>
         <tr>
           <th>도서명</th>
@@ -64,6 +152,46 @@
       </tbody>
     </table>
   </div>
+
+  <div id="footer-bottom">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+
+					<div class="copyright">
+						<div class="row">
+
+							<div class="col-md-6">
+								<p>© 2022 All rights reserved. Free HTML Template by <a
+										href="https://www.templatesjungle.com/" target="_blank">TemplatesJungle</a></p>
+							</div>
+
+							<div class="col-md-6">
+								<div class="social-links align-right">
+									<ul>
+										<li>
+											<a href="#"><i class="icon icon-facebook"></i></a>
+										</li>
+										<li>
+											<a href="#"><i class="icon icon-twitter"></i></a>
+										</li>
+										<li>
+											<a href="#"><i class="icon icon-youtube-play"></i></a>
+										</li>
+										<li>
+											<a href="#"><i class="icon icon-behance-square"></i></a>
+										</li>
+									</ul>
+								</div>
+							</div>
+
+						</div>
+					</div><!--grid-->
+
+				</div><!--footer-bottom-content-->
+			</div>
+		</div>
+	</div>
 
 </body>
 <script src="js/init.js"></script>
