--- a/myProject/index.html
+++ b/myProject/index.html
@@ -91,8 +91,8 @@
 							<div class="main-menu stellarnav">
 								<ul class="menu-list">
 									</li>
-									<li class="menu-item"><a href="#home" class="=nav-link">Home</a></li>
-									<li class="menu-item"><a href="#pages" class="nav-link">상품목록</a></li>
+									<li class="menu-item"><a href="index.html" class="=nav-link">Home</a></li>
+									<li class="menu-item"><a href="product.html" class="nav-link">상품목록</a></li>
 									<li class="menu-item"><a href="addbook.html" class="nav-link">희망도서신청</a></li>
 								</ul>
 
@@ -938,9 +938,22 @@
 				<div class="col-md-2">
 
 					<div class="footer-menu">
+						<h5>HOME></h5>
 						<ul class="menu-list">
 							<li class="menu-item">
-								<a href="#"><h5>상품목록</a>
+								<a href="index.html"></a>
+							</li>
+
+						</ul>
+					</div>
+
+				<div class="col-md-2">
+
+					<div class="footer-menu">
+						<h5>상품목록</h5>
+						<ul class="menu-list">
+							<li class="menu-item">
+								<a href="product.html"></a>
 							</li>
 
 						</ul>
@@ -950,7 +963,11 @@
 				<div class="col-md-2">
 
 					<div class="footer-menu">
-						<a href="#"><h5>희망도서신청</h5></a>
+						<h5>희망도서신청</h5>
+						<ul class="menu-list">
+								<li class="menu-item"></li>
+								<a href="addbook.html"></a>
+							</li>
 
 						</ul>
 					</div>
@@ -971,18 +988,7 @@
 					</div>
 
 				</div>
-				<div class="col-md-2">
 
-					<div class="footer-menu">
-						<h5>Help</h5>
-						<ul class="menu-list">
-							<li class="menu-item">
-								<a href="#">Help center</a>
-	
-						</ul>
-					</div>
-
-				</div>
 
 			</div>
 			<!-- / row -->
