--- a/myProject/login.html
+++ b/myProject/login.html
@@ -128,6 +128,7 @@
       for(let i = 0; i <members.length; i++) {
         if(members[i].id == id && members[i].pw == pw) {
           alert('환영합니다!!');
+          if(localStorage.getItem('memberData').Admin == )
           location.href='index.html'
           return;
         }
