--- a/myProject/product.html
+++ b/myProject/product.html
@@ -1,20 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <title>BookSaw - Free Book Store HTML CSS Template</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>상품목록</title>
+    <meta name="format-detection" content="telephone=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="author" content="">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="icomoon/icomoon.css">
+    <link rel="stylesheet" type="text/css" href="css/vendor.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
+<body data-bs-spy="scroll" data-bs-target="#header" tabindex="0">
 
-<body>
-<div class="container">
-    <ul class="product"></ul>
-    <li class="img"><img src="image/hongongja.jpg"></li>
-</div>
+    <div id="header-wrap">
+
+        <div class="top-content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="social-links">
+                            <ul>
+                                <li>
+                                    <a href="#"><i class="icon icon-facebook"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="icon icon-twitter"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="icon icon-youtube-play"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="icon icon-behance-square"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!--social-links-->
+                    </div>
+                    <div class="col-md-6">
+                        <div class="right-element">
+                            <a href="login.html" class="user-account for-buy"><i
+                                    class="icon icon-user"></i><span>Account</span></a>
+                            <a href="cart.html" class="cart for-buy"><i class="icon icon-clipboard"></i><span>Cart</span></a>
+
+                            <div class="action-menu">
+
+                                <div class="search-bar">
+                                    <a href="#" class="search-button search-toggle" data-selector="#header-wrap">
+                                        <i class="icon icon-search"></i>
+                                    </a>
+                                    <form role="search" method="get" class="search-box">
+                                        <input class="search-field text search-input" placeholder="Search"
+                                            type="search">
+                                    </form>
+                                </div>
+                            </div>
+
+                        </div>
+                        <!--top-right-->
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!--top-content-->
+
+        <header id="header">
+            <div class="container-fluid">
+                <div class="row">
+
+                    <div class="col-md-2">
+                        <div class="main-logo">
+                            <a href="index.html"><img src="images/main-logo.png" alt="logo"></a>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-10">
+
+                        <nav id="navbar">
+                            <div class="main-menu stellarnav">
+                                <ul class="menu-list">
+                                    </li>
+                                    <li class="menu-item"><a href="index.html" class="=nav-link">Home</a></li>
+                                    <li class="menu-item"><a href="product.html" class="nav-link">도서목록</a></li>
+                                    <li class="menu-item"><a href="addbook.html" class="nav-link">희망도서신청</a></li>
+                                </ul>
+
+                                <div class="hamburger">
+                                    <span class="bar"></span>
+                                    <span class="bar"></span>
+                                    <span class="bar"></span>
+                                </div>
+
+                            </div>
+                        </nav>
+
+                    </div>
+
+                </div>
+            </div>
+        </header>
+
+    </div>
+    <!--header-wrap-->
+
+
+    <div id="container">
+        <section id="popular-books" class="bookshelf py-5 my-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+
+                        <div class="section-header align-center">
+                            <div class="title">
+                                <span>Some quality items</span>
+                            </div>
+                            <h2 class="section-title">도서 목록</h2>
+                        </div>
+
+
+                        <div class="tab-content">
+
+                            <div class="row" id="bList">
+
+
+
+                            </div>
+
+                        </div>
+
+
+
+
+
+                    </div>
+
+                </div>
+                <!--inner-tabs-->
+
+            </div>
+        </section>
+    </div>
+    </div>
+
+    <div id="footer-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+
+                    <div class="copyright">
+                        <div class="row">
+
+                            <div class="col-md-6">
+                                <p>© 2022 All rights reserved. Free HTML Template by <a
+                                        href="https://www.templatesjungle.com/" target="_blank">TemplatesJungle</a></p>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="social-links align-right">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><i class="icon icon-facebook"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icon icon-twitter"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icon icon-youtube-play"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icon icon-behance-square"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!--grid-->
+
+                </div>
+                <!--footer-bottom-content-->
+            </div>
+        </div>
+    </div>
+
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+    </script>
+    <script src="js/plugins.js"></script>
+    <script src="js/script.js"></script>
+    <script>
+        let bookList = JSON.parse(localStorage.getItem('addBookData'));
+        console.log(bookList);
+        bookList.forEach(function (item, idx) {
+            let bList = document.querySelector('#bList');
+            bList.innerHTML += ` <div class="col-md-3">
+                                            <div class="product-item">
+                                                <figure class="product-style">
+                                                    <img src="${item.image}" alt="Books" class="product-item">
+                                                    <button type="button" class="add-to-cart" data-product-tile="add-to-cart" data-num='${idx}''>Add to
+                                                        Cart</button>
+                                                </figure>
+                                                <figcaption>
+                                                    <h3>${item.addName}</h3>
+                                                    <span>${item.writer}</span><br>
+                                                    <span>${item.publisher}</span>
+                                                    <div class="item-price">${item.price}원</div>
+                                                </figcaption>
+                                            </div>
+                                            
+                                        </div>`
+        })
+        let cartAry = []
+        let addCart = document.querySelectorAll('.add-to-cart')
+        addCart.forEach(function (item, idx) {
+            item.addEventListener('click', function (e) {
+                let idx = e.target.getAttribute('data-num')
+                alert(`장바구니 등록`)
+                cartAry.push(bookList[idx]);
+                console.log(cartAry);
+                localStorage.setItem('cartAry', JSON.stringify(cartAry));
+            })
+
+        })
+    </script>
 </body>
+
 </html>
